# polyconfig

./: README.md  pyproject.toml
polyconfig/: __init__.py  cli.py  io.py
tests/: test_cli.py
